fix: align title header on the center

--- a/themes/guardrail-theme/login/resources/css/login.css
+++ b/themes/guardrail-theme/login/resources/css/login.css
@@ -855,3 +855,13 @@ span.pf-v5-c-alert__title.kc-feedback-text {
 .pf-v5-c-form__group.pf-m-action {
     overflow: visible;
 }
+
+
+/* Override PatternFly media query to disable grid-template-columns */
+@media (min-width: 768px) {
+    .pf-v5-c-login__main-header {
+        grid-template-columns: unset !important;
+        /* or use: grid-template-columns: none !important; */
+        /* or use: grid-template-columns: 1fr !important; */
+    }
+}
